--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@ body{
 <!-- الأزرار -->
 <div class="grid">
 <a href="" class="card">دورة التحقيقات</a>
-<a href="" class="card">دورة الصاعقة</a>
-<a href="" class="card">دورة الطيران</a>
+<a href="<a href='https://postimg.cc/QBZtGG30' target='_blank'><img src='https://i.postimg.cc/3wdDGYb5/hgwhuri.png' border='0' alt='hgwhuri'></a>" class="card">دورة الصاعقة</a>
+<a href="" class="card">دورة الشؤون العسكرية</a>
 <a href="" class="card">كلية الضباط</a>
-<a href="" class="card">دورة تدريب النفس والبدن</a>
+<a href="" class="card">]دورة التدريبات العسكرية</a>
 <a href="" class="card">دورة أمن وحماية الشخصيات المهمة</a>
 </div>
 
