--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body{
 <!-- الأزرار -->
 <div class="grid">
 <a href="" class="card">دورة التحقيقات</a>
-<a href="<a href='<a href='https://postimg.cc/QBZtGG30' target='_blank'><img src='https://i.postimg.cc/3wdDGYb5/hgwhuri.png' border='0' alt='hgwhuri'></a>" class="card">دورة الصاعقة</a>
+<a href="https://drive.google.com/file/d/1OhT6qoYlFOQi2-slnWL7vMI4ApEKs_rE/view?usp=drive_link" class="card">دورة الصاعقة</a>
 <a href="" class="card">دورة الشؤون العسكرية</a>
 <a href="" class="card">كلية الضباط</a>
 <a href="" class="card">دورة التدريبات العسكرية</a>
