--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body{
 <!-- الأزرار -->
 <div class="grid">
 <a href="" class="card">دورة التحقيقات</a>
-<a href="https://drive.google.com/file/d/1W1lLufo6PhJ3ELJ3O3itKhIZXGSwAXbw/view?usp=drive_link" class="card">دورة الصاعقة</a>
+<a href="https://drive.google.com/file/d/1W1lLufo6PhJ3ELJ3O3itKhIZXGSwAXbw/view" class="card">دورة الصاعقة</a>
 <a href="" class="card">دورة الشؤون العسكرية</a>
 <a href="" class="card">كلية الضباط</a>
 <a href="" class="card">دورة التدريبات العسكرية</a>
